# INFT2503

oving1/: CMakeLists.txt  a.cpp  b.cpp  data.txt  main.cpp
oving2/: main.cpp
oving3/: CMakeLists.txt  Circle.cpp  Circle.hpp  Commodity.cpp  Commodity.hpp  Sentence.cpp  Sentence.hpp  main.cpp
oving4/: CMakeLists.txt  main.cpp
oving5/: main.cpp
oving6/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  ChessBoardPrint.cpp  ChessBoardPrint.hpp  EchoServer.cpp  EchoServer.hpp  main.cpp
oving7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp
oving8/: CMakeLists.txt  main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp
test/: answer.cpp  answer.hpp  main.cpp
test/test/: CMakeLists.txt
